@@ -1,4 +1,5 @@
 1.1.0 [not yet released]
+ - Expose GenericVector::operator{+=,-=,+,-}(double) to Python
  - Add function Function::compute_vertex_values not needing a mesh argument
  - Add support for XDMF and HDF5
  - Add new interface LinearOperator for matrix-free linear systems
